[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/Airflow.png" type="Texture" id=1]
[ext_resource path="res://scenes/mechanics/Ladder.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 18 )

[node name="Ladder" type="Area2D"]
collision_layer = 64
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6, 30 )
frames = SubResource( 6 )
frame = 1

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 6, 18 )
frames = SubResource( 6 )
frame = 3

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 6, 6 )
frames = SubResource( 6 )
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 18 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Ladder_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Ladder_body_exited"]
[connection signal="child_entered_tree" from="CollisionShape2D" to="." method="_on_CollisionShape2D_child_entered_tree"]
[connection signal="child_exiting_tree" from="CollisionShape2D" to="." method="_on_CollisionShape2D_child_exiting_tree"]
